--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.3'
     testImplementation 'junit:junit:4.13.2'
 
     implementation 'com.squareup.retrofit2:retrofit:2.8.0'
